--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
     "@nodegui/nodegui": "^0.56.0",
     "@nodegui/packer": "^1.4.1",
     "@types/node": "^16.4.13",
-    "nodejs": "^16.4.13",	
     "canvas": "^2.9.3",
     "clean-webpack-plugin": "^3.0.0",
     "file-loader": "^6.2.0",
@@ -37,5 +36,8 @@
     "typescript": "^4.3.5",
     "webpack": "^5.49.0",
     "webpack-cli": "^4.7.2"
+  },
+  "devDependencies": {
+    "electron-log": "^4.4.8"
   }
 }
