--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,8 +6,8 @@
   "checkJs": false,
   "outDir": "./dist",
   "sourceMap": true,
-  "strict": true,
-  "alwaysStrict": true,
+  "strict": false,
+  "alwaysStrict": false,
   "moduleResolution": "node",
   "esModuleInterop": true
 }, "include": [ "**/*" ] 
