--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "clean-webpack-plugin": "^3.0.0",
     "file-loader": "^6.2.0",
     "native-addon-loader": "^2.0.1",
+    "net": "^1.0.2",
     "sharp": "^0.30.7",
     "ts-loader": "^9.2.5",
     "typescript": "^4.7.4",
